﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.012002 2014-03-31T04:16:46Z
 [00 Minor]
 - Update utils.
 - dep_changes now qualifies numbers better
 - strip_eol gives a little match context
 - Dep bump

 [Dependencies::Stats]
 - Dependencies changed since 2.012001, see Changes.deps{,.all,.dev} for
   details
 - configure: (recommends: ↑1)
 - develop: ↑3
 - runtime: ↑25
 - test: ↑2 (recommends: ↑2)

2.012001 2014-03-17T18:59:57Z
 [00 Minor]
 - default to jobs = 10

 [Dependencies::Aggregate]
 - 5.010 : 294 → 293
 - 5.012 : 284 → 286
 - 5.019 : 277 → 275

 [Dependencies::Stats]
 - Dependencies changed since 2.012000, see Changes.deps{,.all,.dev} for
   details
 - configure: (recommends: ↑1)
 - develop: ↑3
 - runtime: ↑35
 - test: ↑4 (recommends: ↑2)

2.012000 2014-01-30T08:12:10Z
 [00 Possible Downstream Toolbugs]
 - This distribution switching to EUMM.
 - Future release may default to EUMM

 [Dependencies::Stats]
 - Dependencies changed since 2.011001, see Changes.deps{,.all,.dev} for
   details
 - build: -1 (recommends: -1)
 - configure: +2 -1 (recommends: +1 -1)
 - runtime: +1 -1
 - test: +1 ↓1 (recommends: +1)

2.011001 2014-01-30T05:38:14Z
 [00 Bugfix]
 - Fix regression where hardness value regulated develop time dependencies.
 - Work around weird behaviour in Config::MVP with attribute propagation
   causing errors.

2.011000 2014-01-29T21:19:25Z
 [00 Major]

 [01 - Toolkit alternation]
 - attribute `toolkit` now exists.
 - can be any of `eumm` `mb` or `mbtiny` and will do the right things.

 [02 - Toolkit hardness variation]
 - attribute `tookit_hardness` exists.
 - `hard` = ramp dependencies on toolkit so everyone gets the latest
 - `soft` = copy dependencies on toolkit to recommended, and ramp
   recommended

 [03 - More Recommended deps by far]
 - All the top 3 are now pulled by --recommended
 - All the perl critic modules I use are now pulled by --recommended
 - Both the hardness support modules are pulled by --recommended
