@@ -1,6 +1,9 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Major]
+ - Newly minted dists now default to EUMM
+ - Newly minted dists now default to soft tooling
 
 2.012002 2014-03-31T04:16:46Z
  [00 Minor]
